# ProjektP

./: .gitignore  Datorgrafikprojekt.rtf  README.md  generateCodeBlocks.txt
src/: CMakeLists.txt  camera.c  camera.h  main.c  objects.c  objects.h  terrain.c  terrain.h
src/libs/: CMakeLists.txt  GL_utilities.c  GL_utilities.h  LoadTGA2.c  LoadTGA2.h  VectorUtils2.c  VectorUtils2.h  loadobj.c  loadobj.h  objectHandler.c  objectHandler.h
src/res/: CMakeLists.txt
src/shaders/: CMakeLists.txt  ball.frag  ball.vert  sky.frag  sky.vert  terrain.frag  terrain.vert
